src/qt/libqdatetime.bf

	
	public void AddSecs(int64 secs)
	{
		this.handle.AddSecs(secs);
	}
	
	public void AddMSecs(int64 msecs)
	{
		this.handle.AddMSecs(msecs);
	}
	
	public void ToTimeSpec(int64 spec)
	{
		this.handle.ToTimeSpec(spec);
	}
	
	public void ToLocalTime()
	{
		this.handle.ToLocalTime();
	}
	
	public void ToUTC()
	{
		this.handle.ToUTC();
	}
	
	public void ToOffsetFromUtc(int32 offsetSeconds)
	{
		this.handle.ToOffsetFromUtc(offsetSeconds);
	}
	
	public void ToTimeZone(IQTimeZone toZone)
	{
		this.handle.ToTimeZone(toZone);
	}
	
	public int64 DaysTo(IQDateTime param1)
	{
		return this.handle.DaysTo(param1);
	}
	
	public int64 SecsTo(IQDateTime param1)
	{
		return this.handle.SecsTo(param1);
	}
	
	public int64 MsecsTo(IQDateTime param1)
	{
		return this.handle.MsecsTo(param1);
	}
	
	public static void CurrentDateTime()
	{
		QDateTimePtr.CurrentDateTime();
	}
	
	public static void CurrentDateTimeUtc()
	{
		QDateTimePtr.CurrentDateTimeUtc();
	}
	
	public static void FromStringWithStringVal(String stringVal)
	{
		QDateTimePtr.FromStringWithStringVal(stringVal);
	}
	
	public static void FromString4(String stringVal, String format)
	{
		QDateTimePtr.FromString4(stringVal, format);
	}
	
	public static void FromMSecsSinceEpoch(int64 msecs)
	{
		QDateTimePtr.FromMSecsSinceEpoch(msecs);
	}
	
	public static void FromSecsSinceEpoch(int64 secs)
	{
		QDateTimePtr.FromSecsSinceEpoch(secs);
	}
	
	public static void FromMSecsSinceEpoch2(int64 msecs, IQTimeZone timeZone)
	{
		QDateTimePtr.FromMSecsSinceEpoch2(msecs, timeZone);
	}
	
	public static void FromSecsSinceEpoch2(int64 secs, IQTimeZone timeZone)
	{
		QDateTimePtr.FromSecsSinceEpoch2(secs, timeZone);
	}
	
	public static int64 CurrentMSecsSinceEpoch()
	{
		return QDateTimePtr.CurrentMSecsSinceEpoch();
	}
	
	public static int64 CurrentSecsSinceEpoch()
	{
		return QDateTimePtr.CurrentSecsSinceEpoch();
	}
	
	public libqt_string ToString1(int64 format)
	{
		return this.handle.ToString1(format);
	}
	
	public libqt_string ToString22(String format, IQCalendar cal)
	{
		return this.handle.ToString22(format, default);
	}
	
	public static void FromString23(String stringVal, int64 format)
	{
		QDateTimePtr.FromString23(stringVal, format);
	}
	
	public static void FromString34(String stringVal, String format, IQCalendar cal)
	{
		QDateTimePtr.FromString34(stringVal, format, default);
	}
	
	public static void FromMSecsSinceEpoch22(int64 msecs, int64 spec)
	{
		QDateTimePtr.FromMSecsSinceEpoch22(msecs, spec);
	}
	
	public static void FromMSecsSinceEpoch3(int64 msecs, int64 spec, int32 offsetFromUtc)
	{
		QDateTimePtr.FromMSecsSinceEpoch3(msecs, spec, offsetFromUtc);
	}
	
	public static void FromSecsSinceEpoch22(int64 secs, int64 spec)
	{
		QDateTimePtr.FromSecsSinceEpoch22(secs, spec);
	}
	
	public static void FromSecsSinceEpoch3(int64 secs, int64 spec, int32 offsetFromUtc)
	{
		QDateTimePtr.FromSecsSinceEpoch3(secs, spec, offsetFromUtc);
	}
	
}
extension CQt
{
	[LinkName("QDateTime_new")]
	public static extern void* QDateTime_new();
	[LinkName("QDateTime_new2")]
	public static extern void* QDateTime_new2(void date, void time);
	[LinkName("QDateTime_new3")]
	public static extern void* QDateTime_new3(void date, void time, void* timeZone);
	[LinkName("QDateTime_new4")]
	public static extern void* QDateTime_new4(void* other);
	[LinkName("QDateTime_new5")]
	public static extern void* QDateTime_new5(void date, void time, int64 spec);
	[LinkName("QDateTime_new6")]
	public static extern void* QDateTime_new6(void date, void time, int64 spec, int32 offsetSeconds);
	[LinkName("QDateTime_OperatorAssign")]
	public static extern void QDateTime_OperatorAssign(void* c_this, void* other);
	[LinkName("QDateTime_Swap")]
	public static extern void QDateTime_Swap(void* c_this, void* other);
	[LinkName("QDateTime_IsNull")]
	public static extern bool QDateTime_IsNull(void* c_this);
	[LinkName("QDateTime_IsValid")]
	public static extern bool QDateTime_IsValid(void* c_this);
	[LinkName("QDateTime_Date")]
	public static extern void QDateTime_Date(void* c_this);
	[LinkName("QDateTime_Time")]
	public static extern void QDateTime_Time(void* c_this);
	[LinkName("QDateTime_TimeSpec")]
	public static extern int64 QDateTime_TimeSpec(void* c_this);
	[LinkName("QDateTime_OffsetFromUtc")]
	public static extern int32 QDateTime_OffsetFromUtc(void* c_this);
	[LinkName("QDateTime_TimeZone")]
	public static extern void QDateTime_TimeZone(void* c_this);
	[LinkName("QDateTime_TimeZoneAbbreviation")]
	public static extern libqt_string QDateTime_TimeZoneAbbreviation(void* c_this);
	[LinkName("QDateTime_IsDaylightTime")]
	public static extern bool QDateTime_IsDaylightTime(void* c_this);
	[LinkName("QDateTime_ToMSecsSinceEpoch")]
	public static extern int64 QDateTime_ToMSecsSinceEpoch(void* c_this);
	[LinkName("QDateTime_ToSecsSinceEpoch")]
	public static extern int64 QDateTime_ToSecsSinceEpoch(void* c_this);
	[LinkName("QDateTime_SetDate")]
	public static extern void QDateTime_SetDate(void* c_this, void date);
	[LinkName("QDateTime_SetTime")]
	public static extern void QDateTime_SetTime(void* c_this, void time);
	[LinkName("QDateTime_SetTimeSpec")]
	public static extern void QDateTime_SetTimeSpec(void* c_this, int64 spec);
	[LinkName("QDateTime_SetOffsetFromUtc")]
	public static extern void QDateTime_SetOffsetFromUtc(void* c_this, int32 offsetSeconds);
	[LinkName("QDateTime_SetTimeZone")]
	public static extern void QDateTime_SetTimeZone(void* c_this, void* toZone);
	[LinkName("QDateTime_SetMSecsSinceEpoch")]
	public static extern void QDateTime_SetMSecsSinceEpoch(void* c_this, int64 msecs);
	[LinkName("QDateTime_SetSecsSinceEpoch")]
	public static extern void QDateTime_SetSecsSinceEpoch(void* c_this, int64 secs);
	[LinkName("QDateTime_ToString")]
	public static extern libqt_string QDateTime_ToString(void* c_this);
	[LinkName("QDateTime_ToStringWithFormat")]
	public static extern libqt_string QDateTime_ToStringWithFormat(void* c_this, libqt_string format);
	[LinkName("QDateTime_AddDays")]
	public static extern void QDateTime_AddDays(void* c_this, int64 days);
	[LinkName("QDateTime_AddMonths")]
	public static extern void QDateTime_AddMonths(void* c_this, int32 months);
	[LinkName("QDateTime_AddYears")]
	public static extern void QDateTime_AddYears(void* c_this, int32 years);
	[LinkName("QDateTime_AddSecs")]
	public static extern void QDateTime_AddSecs(void* c_this, int64 secs);
	[LinkName("QDateTime_AddMSecs")]
	public static extern void QDateTime_AddMSecs(void* c_this, int64 msecs);
	[LinkName("QDateTime_ToTimeSpec")]
	public static extern void QDateTime_ToTimeSpec(void* c_this, int64 spec);
	[LinkName("QDateTime_ToLocalTime")]
	public static extern void QDateTime_ToLocalTime(void* c_this);
	[LinkName("QDateTime_ToUTC")]
	public static extern void QDateTime_ToUTC(void* c_this);
	[LinkName("QDateTime_ToOffsetFromUtc")]
	public static extern void QDateTime_ToOffsetFromUtc(void* c_this, int32 offsetSeconds);
	[LinkName("QDateTime_ToTimeZone")]
	public static extern void QDateTime_ToTimeZone(void* c_this, void* toZone);
	[LinkName("QDateTime_DaysTo")]
	public static extern int64 QDateTime_DaysTo(void* c_this, void* param1);
	[LinkName("QDateTime_SecsTo")]
	public static extern int64 QDateTime_SecsTo(void* c_this, void* param1);
	[LinkName("QDateTime_MsecsTo")]
	public static extern int64 QDateTime_MsecsTo(void* c_this, void* param1);
	[LinkName("QDateTime_CurrentDateTime")]
	public static extern void QDateTime_CurrentDateTime();
	[LinkName("QDateTime_CurrentDateTimeUtc")]
	public static extern void QDateTime_CurrentDateTimeUtc();
	[LinkName("QDateTime_FromStringWithStringVal")]
	public static extern void QDateTime_FromStringWithStringVal(libqt_string stringVal);
	[LinkName("QDateTime_FromString4")]
	public static extern void QDateTime_FromString4(libqt_string stringVal, libqt_string format);
	[LinkName("QDateTime_FromMSecsSinceEpoch")]
	public static extern void QDateTime_FromMSecsSinceEpoch(int64 msecs);
	[LinkName("QDateTime_FromSecsSinceEpoch")]
	public static extern void QDateTime_FromSecsSinceEpoch(int64 secs);
	[LinkName("QDateTime_FromMSecsSinceEpoch2")]
	public static extern void QDateTime_FromMSecsSinceEpoch2(int64 msecs, void* timeZone);
	[LinkName("QDateTime_FromSecsSinceEpoch2")]
	public static extern void QDateTime_FromSecsSinceEpoch2(int64 secs, void* timeZone);
	[LinkName("QDateTime_CurrentMSecsSinceEpoch")]
	public static extern int64 QDateTime_CurrentMSecsSinceEpoch();
	[LinkName("QDateTime_CurrentSecsSinceEpoch")]
	public static extern int64 QDateTime_CurrentSecsSinceEpoch();
	[LinkName("QDateTime_ToString1")]
	public static extern libqt_string QDateTime_ToString1(void* c_this, int64 format);
	[LinkName("QDateTime_ToString22")]
	public static extern libqt_string QDateTime_ToString22(void* c_this, libqt_string format, void cal);
	[LinkName("QDateTime_FromString23")]
	public static extern void QDateTime_FromString23(libqt_string stringVal, int64 format);
	[LinkName("QDateTime_FromString34")]
	public static extern void QDateTime_FromString34(libqt_string stringVal, libqt_string format, void cal);
	[LinkName("QDateTime_FromMSecsSinceEpoch22")]
	public static extern void QDateTime_FromMSecsSinceEpoch22(int64 msecs, int64 spec);
	[LinkName("QDateTime_FromMSecsSinceEpoch3")]
	public static extern void QDateTime_FromMSecsSinceEpoch3(int64 msecs, int64 spec, int32 offsetFromUtc);
	[LinkName("QDateTime_FromSecsSinceEpoch22")]
	public static extern void QDateTime_FromSecsSinceEpoch22(int64 secs, int64 spec);
	[LinkName("QDateTime_FromSecsSinceEpoch3")]
	public static extern void QDateTime_FromSecsSinceEpoch3(int64 secs, int64 spec, int32 offsetFromUtc);
	/// Delete this object from C++ memory
	[LinkName("QDateTime_Delete")]
	public static extern void QDateTime_Delete(void* self);
}